<resources>
    <string name="app_name">knot-setup-app</string>

    <!-- Strings used by ConnectedGatewayActivity -->
    <string name="gateway_configure_WiFi">Configure Wi-Fi</string>
    <string name="gateway_connected">Connected</string>
    <string name="searching_for_gateways">Looking for gateways...</string>
    <string name="gateway_header_title">Gateways</string>

    <!-- Strings used in activity_scan_for_devices -->
    <string name="scan_label">Chose the KNoT gateway you want to connect with.</string>
    <string name="scanning">Looking for devices... </string>
    <string name="scan_turn_bt_on">Please turn the bluetooth on.</string>
    <string name="bluetooth_device">Bluetooth setting THINGs up</string>
    <string name="loading">Loading... </string>

    <!-- Strings used by ThingActivity -->
    <string name="thing_header_title">THING\'s</string>
    <string name="thing_unregistered">Unregistered</string>
    <string name="thing_registered">Registered</string>

    <!--Strings used by ConfigureDeviceActivity -->
    <string name="configure_device_header_title">Network Settings</string>
    <string name="configure_device_tab_name">KNoT gateway id#</string>
    <string name="otsettings">OT&#160;Settings</string>
    <string name="channel">Channel</string>
    <string name="netname">Net&#160;Name</string>
    <string name="panid">Pan&#160;ID</string>
    <string name="xpanid">Xpanid</string>
    <string name="masterkey">Masterkey</string>
    <string name="IPV6">IPV6</string>
    <string name="thing_pairing_succeeded">Successfully paired with device!</string>
    <string name="thing_get_openthread_request_failed">
        Something is wrong with the gateway,please try again later.</string>


    <!-- Strings used by LoginActivity -->
    <string name="login_header_title">User Credentials</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="login_subtitle">User Credentials</string>
    <string name="login_invalid_credentials">Incorrect username or password.</string>

    <!-- Strings used by ConfigureGatewayWifiActivity -->
    <string name="configure_gateway_wifi_header_title">Wi-Fi Configuration</string>
    <string name="configure_gateway_wifi_tab_name">KNoT Gateway #?</string>
    <string name="network_name">Network name:</string>
    <string name="configure_gateway_subtitle">Wi-Fi Configuration</string>

    <!-- Strings of general use -->
    <string name="all_enter">enter</string>
    <string name="all_scan_failed">Scanning has failed.</string>
    <string name="failed_write">Failure when writing a characteristic.</string>

</resources>
