<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.configureDevice.ConfigureDeviceActivity">

    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bluetooth_device"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/otSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/otsettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitle" />

    <TextView
        android:id="@+id/IPV6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/IPV6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masterkey" />

    <FrameLayout
        android:id="@+id/channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/otSettings"
        app:layout_constraintTop_toBottomOf="@+id/otSettings">
        <TextView
            android:id="@+id/channel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/channel" />
        <ProgressBar
            android:id="@+id/channel_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="96dp"
            android:layout_gravity="center_horizontal|end"
            />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/net_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/channel"
        app:layout_constraintTop_toBottomOf="@+id/channel">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/netname" />
        <ProgressBar
            android:id="@+id/net_name_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="96dp"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/pan_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/net_name"
        app:layout_constraintTop_toBottomOf="@+id/net_name"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/panid"/>
        <ProgressBar
            android:id="@+id/pan_id_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="96dp"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/xpan_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/pan_id"
        app:layout_constraintTop_toBottomOf="@+id/pan_id"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/xpanid"/>
        <ProgressBar
            android:id="@+id/xpan_id_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="96dp"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/masterkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/xpan_id"
        app:layout_constraintTop_toBottomOf="@+id/xpan_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start|center"
            android:layout_height="wrap_content"
            android:text="@string/masterkey" />
        <ProgressBar
            android:id="@+id/masterkey_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="96dp"
            android:layout_gravity="center_vertical|end" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/IPV6_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/otSettings"
        app:layout_constraintTop_toBottomOf="@+id/IPV6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/IPV6" />

        <ProgressBar
            android:id="@+id/IPV6_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="96dp" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>