<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_bg"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/otSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorKnotGreen"
        android:text="@string/otsettings"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <RelativeLayout
        android:id="@+id/net_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/otSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/masterkey"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/net_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/netname"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorKnotGreen"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/net_name_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/net_name_text_view"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/net_name_check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/net_name_text_view"
            android:layout_alignRight="@+id/net_name_progress_bar"
            android:layout_alignLeft="@+id/net_name_progress_bar"
            android:layout_alignTop="@+id/net_name_progress_bar"
            android:layout_alignBottom="@+id/net_name_progress_bar"
            android:src="@drawable/ic_check_circle_2"
            android:visibility="invisible"
            android:background="@color/transparent"
            />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@id/net_name"
        app:layout_constraintTop_toTopOf="@+id/net_name"
        app:layout_constraintBottom_toBottomOf="@+id/net_name"
        >

        <TextView
            android:id="@+id/channel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorKnotGreen"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/channel_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channel_text_view"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/channel_check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/channel_text_view"
            android:layout_alignRight="@+id/channel_progress_bar"
            android:layout_alignLeft="@+id/channel_progress_bar"
            android:layout_alignTop="@+id/channel_progress_bar"
            android:layout_alignBottom="@+id/channel_progress_bar"
            android:src="@drawable/ic_check_circle_2"
            android:visibility="invisible"
            android:background="@color/transparent"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pan_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/net_name"
        app:layout_constraintTop_toBottomOf="@id/otSettings"
        app:layout_constraintTop_toTopOf="@+id/net_name"
        app:layout_constraintBottom_toBottomOf="@+id/net_name">
        <TextView
            android:id="@+id/pan_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panid"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorKnotGreen"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/pan_id_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pan_id_text_view"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/pan_id_check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/pan_id_text_view"
            android:layout_alignRight="@+id/pan_id_progress_bar"
            android:layout_alignLeft="@+id/pan_id_progress_bar"
            android:layout_alignTop="@+id/pan_id_progress_bar"
            android:layout_alignBottom="@+id/pan_id_progress_bar"
            android:src="@drawable/ic_check_circle_2"
            android:visibility="invisible"
            android:background="@color/transparent"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/xpan_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/channel"
        app:layout_constraintEnd_toEndOf="@id/channel"
        app:layout_constraintTop_toBottomOf="@id/channel"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/xpan_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xpanid"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorKnotGreen"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/xpan_id_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xpan_id_text_view"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/xpan_id_check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/xpan_id_text_view"
            android:layout_alignRight="@+id/xpan_id_progress_bar"
            android:layout_alignLeft="@+id/xpan_id_progress_bar"
            android:layout_alignTop="@+id/xpan_id_progress_bar"
            android:layout_alignBottom="@+id/xpan_id_progress_bar"
            android:src="@drawable/ic_check_circle_2"
            android:visibility="invisible"
            android:background="@color/transparent"
            />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/masterkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/net_name"
        app:layout_constraintStart_toEndOf="@id/net_name"
        app:layout_constraintTop_toBottomOf="@id/net_name"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/masterkey_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masterkey"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorKnotGreen"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/masterkey_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/masterkey_text_view"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/masterkey_check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/masterkey_text_view"
            android:layout_alignRight="@+id/masterkey_progress_bar"
            android:layout_alignLeft="@+id/masterkey_progress_bar"
            android:layout_alignTop="@+id/masterkey_progress_bar"
            android:layout_alignBottom="@+id/masterkey_progress_bar"
            android:src="@drawable/ic_check_circle_2"
            android:visibility="invisible"
            android:background="@color/transparent"
            />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>